# my-torch

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
examples/: hello_world.cpp
include/mytorch/: autograd.h  cuda_utils.h  ops.h  storage.h  tensor.h
include/mytorch/autograd/: function.h  variable.h
include/mytorch/ops/: ops.h
matmul/: .gitignore  Makefile  README.md  STORY.md
matmul/results/: matmul_cpu_cache_friendly.result  matmul_cpu_naive.result  matmul_gpu_cublas.result  matmul_gpu_naive_no_warp.result  matmul_gpu_reg_tiled.result  matmul_gpu_warptiled_ashared_T.result
matmul/src/: driver.cpp  kernels.cu  matmul.h
src/: storage.cpp  tensor.cpp
src/autograd/: functional.cpp
src/ops/: add.cu  dispatch.cpp  elementwise.cpp  elementwise.cu  matmul.cpp  matmul.cu
tests/: CMakeLists.txt  autograd_test.cpp  cuda_add_test.cpp  elementwise_test.cpp  matmul_test.cpp  storage_test.cpp  tensor_test.cpp
trying/: Makefile  matmul  matmul.cpp  matmul.cu  matmul.h  matmul_cpu_cache_friendly  matmul_cpu_naive  matmul_gpu_cublas  matmul_gpu_naive_shared_mem_tiled.result  matmul_gpu_naive_warp_aware.result  matmul_gpu_reg_float4  matmul_gpu_reg_float4.result  matmul_gpu_reg_tiled  matmul_gpu_reg_tiled.result  matmul_gpu_test  matmul_gpu_warptile  matmul_gpu_warptile.result  matmul_gpu_warptile_doublebuff  matmul_gpu_warptile_doublebuff.result  matmul_gpu_warptiled_ashared_T  oracle.py
